--- a/apps/ag-grid-editing/src/styles.scss
+++ b/apps/ag-grid-editing/src/styles.scss
@@ -1,5 +1,7 @@
 @import 'ag-grid-community/dist/styles/ag-grid.css';
 @import 'ag-grid-community/dist/styles/ag-theme-alpine.css';
+@import 'ag-grid-community/dist/styles/ag-theme-alpine/sass/ag-theme-alpine-mixin.scss';
+@import 'theme-variables';
 
 html,
 body {
@@ -23,5 +25,145 @@ html {
 	box-sizing: inherit;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+	height: 100%;
+}
+body {
+	margin: 0;
+	font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+.ag-theme-custom-angular {
+	@include ag-theme-alpine(
+		(
+			range-selection-border-color: $primary,
+			range-selection-background-color: #03305633,
+			borders: false,
+			row-border-color: $primary,
+			grid-size: 3px,
+			foreground-color: #777,
+			data-color: ag-derived(foreground-color),
+			row-hover-color: ag-derived(background-color),
+			selected-row-background-color: ag-derived(background-color),
+			header-height: 36px,
+			row-height: 36px,
+		)
+	);
+
+	//			selected-row-background-color: $alt-primary-very-light,
+
+	.ag-header {
+		background-color: white;
+		border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+	}
+
+	.ag-header-cell {
+		font-weight: 500;
+		color: #555;
+		font-size: 0.8rem;
+	}
+
+	.ag-row-selected {
+		color: #111;
+		font-weight: 600;
+	}
+
+	--ag-checkbox-checked-color: $accent;
+
+	.ag-row-hover {
+		outline: 1px solid rgba(0, 0, 0, 0.2);
+		outline-offset: -1px;
+	}
+
+	/*
+		Prevent showing a border around a selected cell in ag-grid.
+	*/
+	// .ag-cell-focus,
+	// .ag-cell-no-focus {
+	// 	border: none !important;
+	// }
+
+	// .ag-cell:focus {
+	// 	border: none !important;
+	// 	outline: none;
+	// }
+
+	/*
+		Show a border around the focused row.
+	*/
+
+	.ag-row-focus::after {
+		content: '';
+		inset: 0;
+		position: absolute;
+		box-shadow: inset 0 2px 1px -1px $primary, inset 0 -2px 1px -1px $primary;
+		z-index: 5;
+	}
+}
+
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+ag-grid-angular:not(.no-fade-in) {
+	// Animation to avoid nasty movement of columns as the grid lays out
+	opacity: 0;
+	animation: fade-in 0.1s ease-in 1 forwards;
+	animation-delay: 0.15s;
+}
+
+.ag-cell.color-cell {
+	span {
+		height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+}
+
+.ag-cell {
+	&.cell-center {
+		text-align: center;
+	}
+	&.cell-right {
+		text-align: right;
+	}
+	&.cell-left {
+		text-align: left;
+	}
+	&.no-padding {
+		padding: 0 !important;
+	}
+	&.cell-warning {
+		color: $warn;
+	}
+
+	.grid-command-icon {
+		cursor: pointer;
+	}
+
+	&.date-time {
+		span {
+			display: inline-block;
+		}
+		span.date {
+			width: 90px;
+		}
+
+		span.time {
+			width: 90px;
+		}
+	}
+}
+
+// Global styling for not-valid rows.
+.ag-row.not-valid {
+	opacity: 0.75;
+	background-color: rgba(220 220 220 / 30%);
+}
