--- a/apps/ag-grid-editing/src/theme-variables.scss
+++ b/apps/ag-grid-editing/src/theme-variables.scss
@@ -2,8 +2,8 @@
 @use '@angular/material' as mat;
 
 // Define the theme - indigo/pink/red - traditional Staff.Care colours.
-$my-app-primary: mat.define-palette(mat.$indigo-palette);
-$my-app-accent: mat.define-palette(mat.$pink-palette);
+$my-app-primary: mat.define-palette(mat.$purple-palette);
+$my-app-accent: mat.define-palette(mat.$amber-palette);
 $my-app-warn: mat.define-palette(mat.$red-palette);
 
 // Some alternative colours
